Avoid forking if Gradle already has appropriate add-exports/add-opens
…passed through org.gradle.jvmargs property.